<resources>
    <string name="FaceTec_accessibility_cancel_button">Cancel</string>
    <string name="FaceTec_accessibility_torch_button">Toggle Light</string>
    <string name="FaceTec_action_accept_photo">ACCEPT</string>
    <string name="FaceTec_action_confirm">CONFIRM INFO</string>
    <string name="FaceTec_action_continue">CONTINUE</string>
    <string name="FaceTec_action_im_ready">I\'M READY</string>
    <string name="FaceTec_action_ok">OK</string>
    <string name="FaceTec_action_retake_photo">RETAKE</string>
    <string name="FaceTec_action_scan_nfc">SCAN ePASSPORT</string>
    <string name="FaceTec_action_scan_nfc_card">SCAN ID CARD</string>
    <string name="FaceTec_action_skip_nfc">SKIP THIS STEP</string>
    <string name="FaceTec_action_take_photo">TAKE PHOTO</string>
    <string name="FaceTec_action_try_again">TRY AGAIN</string>
    <string name="FaceTec_camera_permission_enable_camera">ENABLE CAMERA</string>
    <string name="FaceTec_camera_permission_header">Enable Camera</string>
    <string name="FaceTec_camera_permission_launch_settings">LAUNCH SETTINGS</string>
    <string name="FaceTec_camera_permission_message_auth">Your camera is disabled. Tap below to edit your settings.</string>
    <string name="FaceTec_camera_permission_message_enroll">Please click the button below to enable your selfie camera.</string>
    <string name="FaceTec_feedback_center_face">Keep your face in the centre</string>
    <string name="FaceTec_feedback_face_not_found">Frame your face</string>
    <string name="FaceTec_feedback_face_not_looking_straight_ahead">Look straight ahead</string>
    <string name="FaceTec_feedback_face_not_upright">Keep your head straight</string>
    <string name="FaceTec_feedback_hold_steady">Hold still...</string>
    <string name="FaceTec_feedback_move_phone_away">Move away</string>
    <string name="FaceTec_feedback_move_phone_closer">Move closer</string>
    <string name="FaceTec_feedback_move_phone_even_closer">Even closer</string>
    <string name="FaceTec_feedback_move_phone_to_eye_level">Hold your phone at eye level</string>
    <string name="FaceTec_feedback_use_even_lighting">Find better lighting</string>
    <string name="FaceTec_idscan_capture_hold_steady_message">Please Hold Steady</string>
    <string name="FaceTec_idscan_capture_id_back_instruction_message">Show Back of ID</string>
    <string name="FaceTec_idscan_capture_id_front_instruction_message">Show Front of ID</string>
    <string name="FaceTec_idscan_capture_tap_to_focus_message">Tap Screen To Focus</string>
    <string name="FaceTec_idscan_nfc_card_status_finished_with_error_message">ID Card Chip\nUnreadable</string>
    <string name="FaceTec_idscan_nfc_card_status_ready_message">Get Ready to Scan\nYour ID Card Chip</string>
    <string name="FaceTec_idscan_nfc_card_status_starting_message">Hold Phone to ID Card\nto Scan NFC Chip</string>
    <string name="FaceTec_idscan_nfc_status_disabled_message">Please Enable NFC\nIn Your Device Settings\nTo Continue</string>
    <string name="FaceTec_idscan_nfc_status_finished_with_error_message">ePassport Chip\nUnreadable</string>
    <string name="FaceTec_idscan_nfc_status_finished_with_success_message">Document Scan\nComplete</string>
    <string name="FaceTec_idscan_nfc_status_ready_message">Get Ready to Scan\nYour ePassport Chip</string>
    <string name="FaceTec_idscan_nfc_status_scanning_message">Hold Steady,\nScanning NFC Chip</string>
    <string name="FaceTec_idscan_nfc_status_skipped_message">NFC Scan\nSkipped</string>
    <string name="FaceTec_idscan_nfc_status_starting_message">Hold Phone to Back\nCover of ePassport\nto Scan NFC Chip</string>
    <string name="FaceTec_idscan_nfc_status_weak_connection_message">Let\'s Try\nAnother Scan</string>
    <string name="FaceTec_idscan_ocr_confirmation_main_header">Review &amp; Confirm</string>
    <string name="FaceTec_idscan_review_id_back_instruction_message">Confirm Photo is Clear &amp; Legible</string>
    <string name="FaceTec_idscan_review_id_front_instruction_message">Confirm Photo is Clear &amp; Legible</string>
    <string name="FaceTec_idscan_type_selection_header">Prepare to Scan\nYour ID Document</string>
    <string name="FaceTec_instructions_header_ready_1">Get ready for</string>
    <string name="FaceTec_instructions_header_ready_2">your scan</string>
    <string name="FaceTec_instructions_message_ready_1">Please frame your face in the small oval</string>
    <string name="FaceTec_instructions_message_ready_2">then the big oval</string>
    <string name="FaceTec_internal_dev_mode_tag">This App is in Development Mode</string>
    <string name="FaceTec_presession_brighten_your_environment">Brighten Your Environment</string>
    <string name="FaceTec_presession_conditions_too_bright">Conditions Too Bright</string>
    <string name="FaceTec_presession_eyes_straight_ahead">Look Straight Ahead</string>
    <string name="FaceTec_presession_frame_your_face">Frame Your Face In The Oval</string>
    <string name="FaceTec_presession_hold_steady_1">Hold Steady For: 1</string>
    <string name="FaceTec_presession_hold_steady_2">Hold Steady For: 2</string>
    <string name="FaceTec_presession_hold_steady_3">Hold Steady For: 3</string>
    <string name="FaceTec_presession_neutral_expression">Neutral Expression, No Smiling</string>
    <string name="FaceTec_presession_position_face_straight_in_oval">Look Straight Ahead</string>
    <string name="FaceTec_presession_remove_dark_glasses">Remove Dark Glasses</string>
    <string name="FaceTec_result_facescan_upload_message">Processing your face scan...</string>
    <string name="FaceTec_result_idscan_retry_face_did_not_match_message">Face Didn\'t Match\nHighly Enough</string>
    <string name="FaceTec_result_idscan_retry_id_not_fully_visible_message">ID Document\nNot Fully Visible</string>
    <string name="FaceTec_result_idscan_retry_id_type_not_supported_message">ID Type Not Supported\nPlease Use a Different ID</string>
    <string name="FaceTec_result_idscan_retry_ocr_results_not_good_enough_message">ID Text Not Legible</string>
    <string name="FaceTec_result_idscan_skip_or_error_nfc_message">NFC Scan Info\nUploaded</string>
    <string name="FaceTec_result_idscan_success_back_side_message">Back of ID Captured</string>
    <string name="FaceTec_result_idscan_success_front_side_back_next_message">Your 3D Face\nMatched Your ID</string>
    <string name="FaceTec_result_idscan_success_front_side_message">Your 3D Face\nMatched Your ID</string>
    <string name="FaceTec_result_idscan_success_nfc_message">NFC Chip Info\nVerified</string>
    <string name="FaceTec_result_idscan_success_user_confirmation_message">ID Verification\nComplete</string>
    <string name="FaceTec_result_idscan_unsuccess_message">ID Photo\nDid Not Match\nUser\'s Face</string>
    <string name="FaceTec_result_idscan_upload_message">Uploading\nEncrypted\nID Scan</string>
    <string name="FaceTec_result_nfc_upload_message">Uploading\nEncrypted\nNFC Details</string>
    <string name="FaceTec_result_success_message">Success</string>
    <string name="FaceTec_retry_header">Let\'s try that again...</string>
    <string name="FaceTec_retry_ideal_image_label">Ideal pose</string>
    <string name="FaceTec_retry_instruction_message_1">Neutral expression, no smiling</string>
    <string name="FaceTec_retry_instruction_message_2">Find somewhere with good lighting</string>
    <string name="FaceTec_retry_instruction_message_3">Too blurry, clean your camera</string>
    <string name="FaceTec_retry_subheader_message">Please follow the guideline below:</string>
    <string name="FaceTec_retry_your_image_label">Your scan</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="android_yds_nfc_education_dialog_header">Enable NFC to start the scan</string>
    <string name="android_yds_nfc_education_dialog_primary_cta">Go to Settings</string>
    <string name="android_yds_nfc_education_dialog_secondary_cta">Cancel</string>
    <string name="ios_android_yds_cant_detect_chip_guidelines_header_detect">We couldn\'t detect your chip</string>
    <string name="ios_android_yds_cant_detect_chip_guidelines_header_read">We couldn\'t read your chip</string>
    <string name="ios_android_yds_invalid_nfc_process_description">Don\'t worry, we can still confirm your details. We\'ll upload the photo of your passport to check that it is real and valid.</string>
    <string name="ios_android_yds_invalid_nfc_process_header_detect">We couldn\'t detect your chip</string>
    <string name="ios_android_yds_invalid_nfc_process_header_read">We couldn\'t read your chip</string>
    <string name="ios_android_yds_invalid_nfc_process_primary_cta">OK</string>
    <string name="ios_android_yds_verify_your_details_description">Select the type of passport you have to continue.</string>
    <string name="ios_android_yds_verify_your_details_header">Confirm your details</string>
    <string name="ios_android_yds_verify_your_details_primary_cta_title">ePassport</string>
    <string name="ios_android_yds_verify_your_details_secondary_cta_title">Traditional passport</string>
    <string name="mb_close">Close</string>
    <string name="mb_flashlight">Flashlight</string>
    <string name="mb_help">Help</string>
    <string name="yds_automation_capture_select_image">Select image</string>
    <string name="yds_automation_capture_select_pdf">Select PDF</string>
    <string name="yds_automation_capture_take_picture">Take picture</string>
    <string name="yds_common_got_it">Got it</string>
    <string name="yds_document_guidelines_header">Guidelines</string>
    <string name="yds_document_selection_cra_check_description">We are going to check your details with an identity verification provider.</string>
    <string name="yds_document_selection_cra_check_title">Identity check</string>
    <string name="yds_document_selection_verification_info">More about verification</string>
    <string name="yds_non_id_document_guidelines_document_clear_guideline">The details are clear and in focus</string>
    <string name="yds_non_id_document_guidelines_document_not_covered_guideline">The document isn\'t covered by anything</string>
    <string name="yds_non_id_document_guidelines_format_requirement">The document must be in a PDF, JPEG or PNG format.</string>
    <string name="yds_non_id_document_guidelines_mobile_first_description">Please make sure the photo you capture or upload follows these guidelines.</string>
    <string name="yds_non_id_document_guidelines_second_description">If you are uploading your document, please also make sure the file:</string>
    <string name="yds_non_id_document_guidelines_size_requirement">The file size must be under 10MB.</string>
</resources>