<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/yds_identity_check_background"
    android:paddingTop="16dp"
    android:paddingBottom="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <TextView
        android:id="@+id/textViewIdentityCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yds_document_selection_cra_check_title"
        style="@style/Yds.TextView.Header"/>
    <TextView
        android:id="@+id/textViewIdentityCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/yds_document_selection_cra_check_description"
        style="@style/Yds.TextView.Text"/>
    <com.yoti.mobile.android.common.p049ui.widgets.YotiButton
        android:id="@+id/buttonMoreAboutIdentityCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/yds_document_selection_verification_info"
        style="@style/Yds.Button.Link"/>
</LinearLayout>
