<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mrtd_nav_graph"
    app:startDestination="@+id/mrtdScanFragment">
    <action
        android:id="@+id/action_restart_flow"
        app:destination="@+id/mrtdScanFragment"
        app:popUpTo="@+id/mrtdScanFragment"
        app:popUpToInclusive="true"/>
    <fragment
        android:label="MrtdScanFragment"
        android:name="com.yoti.mobile.android.mrtd.view.MrtdScanFragment"
        android:id="@+id/mrtdScanFragment">
        <action
            android:id="@+id/action_enable_nfc"
            app:destination="@+id/enableNfcDialog"/>
        <action
            android:id="@+id/action_read_nfc"
            app:destination="@+id/nfcReadDialog"/>
    </fragment>
    <dialog
        android:label="EnableNfcDialog"
        android:name="com.yoti.mobile.android.mrtd.view.EnableNfcDialog"
        android:id="@+id/enableNfcDialog">
        <action
            android:id="@+id/action_read_nfc"
            app:destination="@+id/nfcReadDialog"
            app:popUpTo="@+id/mrtdScanFragment"/>
    </dialog>
    <dialog
        android:label="ReadNfcDialog"
        android:name="com.yoti.mobile.android.mrtd.view.MrtdReadFragment"
        android:id="@+id/nfcReadDialog">
        <action
            android:id="@+id/action_nfc_detect_error"
            app:destination="@+id/mrtdGuidelinesFragment"
            app:popUpTo="@+id/mrtdScanFragment">
            <argument
                android:name="titleResId"
                android:defaultValue="@string/ios_android_yds_cant_detect_chip_guidelines_header_detect"
                app:argType="reference"/>
        </action>
        <action
            android:id="@+id/action_nfc_detect_failed"
            app:destination="@+id/mrtdErrorFragment"
            app:popUpTo="@+id/mrtdScanFragment">
            <argument
                android:name="titleResId"
                android:defaultValue="@string/ios_android_yds_invalid_nfc_process_header_detect"
                app:argType="reference"/>
        </action>
        <action
            android:id="@+id/action_nfc_read_error"
            app:destination="@+id/mrtdGuidelinesFragment"
            app:popUpTo="@+id/mrtdScanFragment">
            <argument
                android:name="titleResId"
                android:defaultValue="@string/ios_android_yds_cant_detect_chip_guidelines_header_read"
                app:argType="reference"/>
        </action>
        <action
            android:id="@+id/action_nfc_read_failed"
            app:destination="@+id/mrtdErrorFragment"
            app:popUpTo="@+id/mrtdScanFragment">
            <argument
                android:name="titleResId"
                android:defaultValue="@string/ios_android_yds_invalid_nfc_process_header_read"
                app:argType="reference"/>
        </action>
    </dialog>
    <fragment
        android:label="MrtdGuidelinesFragment"
        android:name="com.yoti.mobile.android.mrtd.view.MrtdGuidelinesFragment"
        android:id="@+id/mrtdGuidelinesFragment">
        <argument
            android:name="titleResId"
            app:argType="reference"/>
    </fragment>
    <fragment
        android:label="MrtdErrorFragment"
        android:name="com.yoti.mobile.android.mrtd.view.MrtdErrorFragment"
        android:id="@+id/mrtdErrorFragment">
        <argument
            android:name="headerImgResId"
            android:defaultValue="0x7f08032d"
            app:argType="reference"/>
        <argument
            android:name="contentResId"
            android:defaultValue="@string/ios_android_yds_invalid_nfc_process_description"
            app:argType="reference"/>
        <argument
            android:name="buttonTextResId"
            android:defaultValue="@string/ios_android_yds_invalid_nfc_process_primary_cta"
            app:argType="reference"/>
        <argument
            android:name="actionButtonIconResId"
            android:defaultValue="@drawable/yds_ico_upload"
            app:argType="reference"/>
    </fragment>
</navigation>
