<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/yds_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/takePictureButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yds_automation_capture_take_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/selectPdfButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/yds_margin"
        android:text="@string/yds_automation_capture_select_pdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePictureButton"/>
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/yds_margin"
        android:text="@string/yds_automation_capture_select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPdfButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
