<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/gotItButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.yoti.mobile.android.common.p049ui.widgets.YotiAppbarTransparent
                android:id="@+id/appBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_tile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yds_document_guidelines_header"
                android:layout_marginStart="@dimen/yds_root_view_horizontal_padding"
                android:layout_marginEnd="@dimen/yds_root_view_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBar"
                style="@style/Yds.TextView.Title"/>
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yds_margin"
                android:text="@string/yds_non_id_document_guidelines_mobile_first_description"
                android:lineSpacingExtra="6sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_tile"
                app:layout_constraintStart_toStartOf="@+id/tv_tile"
                app:layout_constraintTop_toBottomOf="@+id/tv_tile"
                style="@style/Yds.TextView.Text"/>
            <ImageView
                android:id="@+id/iv_section_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yds_margin"
                android:src="0x7f08035c"
                app:layout_constraintStart_toStartOf="@+id/tv_tile"
                app:layout_constraintTop_toBottomOf="@+id/tv_message"/>
            <TextView
                android:id="@+id/tv_section_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/yds_non_id_document_guidelines_document_not_covered_guideline"
                android:lineSpacingExtra="6sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_section_1"
                app:layout_constraintStart_toStartOf="@+id/iv_section_1"
                app:layout_constraintTop_toBottomOf="@+id/iv_section_1"
                style="@style/Yds.TextView.Text"/>
            <ImageView
                android:id="@+id/iv_section_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="0x7f08035d"
                android:layout_marginStart="47dp"
                app:layout_constraintStart_toEndOf="@+id/iv_section_1"
                app:layout_constraintTop_toTopOf="@+id/iv_section_1"/>
            <TextView
                android:id="@+id/tv_section_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yds_non_id_document_guidelines_document_clear_guideline"
                android:lineSpacingExtra="6sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_section_2"
                app:layout_constraintStart_toStartOf="@+id/iv_section_2"
                app:layout_constraintTop_toTopOf="@+id/tv_section_1"
                style="@style/Yds.TextView.Text"/>
            <TextView
                android:id="@+id/textViewDocumentGuidelinesSecondDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yds_root_view_horizontal_padding"
                android:text="@string/yds_non_id_document_guidelines_second_description"
                android:lineSpacingExtra="6sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_tile"
                app:layout_constraintStart_toStartOf="@+id/tv_tile"
                app:layout_constraintTop_toBottomOf="@+id/tv_section_1"
                style="@style/Yds.TextView.Text"/>
            <com.yoti.mobile.android.commonui.BulletTextLayout
                android:id="@+id/textViewDocumentGuidelinesFormatRequirement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yds_vertical_margin"
                app:layout_constraintEnd_toEndOf="@+id/tv_tile"
                app:layout_constraintStart_toStartOf="@+id/tv_tile"
                app:layout_constraintTop_toBottomOf="@+id/textViewDocumentGuidelinesSecondDesc"
                app:yds_text="@string/yds_non_id_document_guidelines_format_requirement"/>
            <com.yoti.mobile.android.commonui.BulletTextLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_tile"
                app:layout_constraintStart_toStartOf="@+id/tv_tile"
                app:layout_constraintTop_toBottomOf="@+id/textViewDocumentGuidelinesFormatRequirement"
                app:yds_text="@string/yds_non_id_document_guidelines_size_requirement"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <View
        android:id="@+id/shadow"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Yds.ScrollViewShadow"/>
    <com.yoti.mobile.android.common.p049ui.widgets.YotiButton
        android:id="@+id/gotItButton"
        android:layout_width="0dp"
        android:layout_margin="@dimen/yds_margin"
        android:text="@string/yds_common_got_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        style="@style/Yds.Button.Primary"/>
</androidx.constraintlayout.widget.ConstraintLayout>
