<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yoti_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yoti.mobile.android.common.p049ui.widgets.YotiAppbar
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ios_android_yds_verify_your_details_header"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        style="@style/Yds.TextView.Title"/>
    <TextView
        android:id="@+id/subHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ios_android_yds_verify_your_details_description"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        style="@style/Yds.TextView.Text"/>
    <com.yoti.mobile.android.common.p049ui.widgets.button.YotiOptionButton
        android:id="@+id/buttonEPassport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHeader"
        app:optionLeftIcon="@drawable/yds_ic_e_passport"
        app:optionLeftIconAlignment="middle"
        app:optionTitleText="@string/ios_android_yds_verify_your_details_primary_cta_title"/>
    <com.yoti.mobile.android.common.p049ui.widgets.button.YotiOptionButton
        android:id="@+id/buttonTraditionalPassport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEPassport"
        app:optionLeftIcon="@drawable/yds_ic_passport"
        app:optionLeftIconAlignment="middle"
        app:optionTitleText="@string/ios_android_yds_verify_your_details_secondary_cta_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
