<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iconView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogTitle"
        app:srcCompat="@drawable/yds_ic_nfc"/>
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/android_yds_nfc_education_dialog_header"
        app:layout_constraintBottom_toTopOf="@+id/startSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        style="@style/Yoti.v3.Font.TitleSmall"/>
    <Button
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/android_yds_nfc_education_dialog_secondary_cta"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startSettingsButton"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startSettingsButton"
        style="@style/Yoti.v3.Button.Secondary.Flat"/>
    <Button
        android:id="@+id/startSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/android_yds_nfc_education_dialog_primary_cta"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        app:layout_constraintVertical_bias="1"
        style="@style/Yoti.v3.Button.Primary.Flat"/>
</androidx.constraintlayout.widget.ConstraintLayout>
